--- a/MyApp/Main/Member/MyCollect/CollectStart/MemberMyCollectStartColCell.xib
+++ b/MyApp/Main/Member/MyCollect/CollectStart/MemberMyCollectStartColCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="139" height="237"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="02" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fud-Ey-wvj">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="long" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fud-Ey-wvj">
                         <rect key="frame" x="0.0" y="0.0" width="139" height="139"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="Fud-Ey-wvj" secondAttribute="height" id="UaQ-en-nbb"/>
@@ -55,7 +55,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="02" width="126" height="126"/>
+        <image name="long" width="171.5" height="227.5"/>
         <image name="member_have_collect" width="20" height="20"/>
     </resources>
 </document>
