--- a/MyApp/Main/Member/MyOrder/MemberMyOrderCell.xib
+++ b/MyApp/Main/Member/MyOrder/MemberMyOrderCell.xib
@@ -45,7 +45,7 @@
                                     <constraint firstAttribute="height" constant="0.34999999999999998" id="rAM-ww-1aW"/>
                                 </constraints>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="02" translatesAutoresizingMaskIntoConstraints="NO" id="tdB-Tb-yrm">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="long" translatesAutoresizingMaskIntoConstraints="NO" id="tdB-Tb-yrm">
                                 <rect key="frame" x="14" y="54.5" width="121.5" height="121.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tdB-Tb-yrm" secondAttribute="height" id="aQ0-lw-P3q"/>
@@ -124,6 +124,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="02" width="126" height="126"/>
+        <image name="long" width="171.5" height="227.5"/>
     </resources>
 </document>
