--- a/MyApp/Main/Member/Record/RecordLongMovie/MemberRecordLongMovieCell.xib
+++ b/MyApp/Main/Member/Record/RecordLongMovie/MemberRecordLongMovieCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="209"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="02" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N3l-Bw-ox6">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="long" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N3l-Bw-ox6">
                         <rect key="frame" x="14" y="14" width="113" height="150"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="113" id="4gz-hP-IHm"/>
@@ -54,6 +54,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="02" width="126" height="126"/>
+        <image name="long" width="171.5" height="227.5"/>
     </resources>
 </document>
