--- a/MyApp/Main/Member/Record/RecordShortMovie/MemberRecordShortMovieCell.xib
+++ b/MyApp/Main/Member/Record/RecordShortMovie/MemberRecordShortMovieCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="337" height="245"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="02" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2SE-NQ-hRw">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="short" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2SE-NQ-hRw">
                         <rect key="frame" x="14" y="14" width="171" height="112.5"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="171" id="VOv-HN-TnP"/>
@@ -54,6 +54,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="02" width="126" height="126"/>
+        <image name="short" width="347" height="159"/>
     </resources>
 </document>
