--- a/MyApp/Main/StoryBoard/Member.storyboard
+++ b/MyApp/Main/StoryBoard/Member.storyboard
@@ -1277,9 +1277,10 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="wordWrap" translatesAutoresizingMaskIntoConstraints="NO" id="7xC-JH-UCI">
-                                <rect key="frame" x="384" y="189" width="30" height="88"/>
+                                <rect key="frame" x="389" y="189" width="25" height="88"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="40I-b4-AJe"/>
+                                    <constraint firstAttribute="width" constant="25" id="40I-b4-AJe"/>
                                     <constraint firstAttribute="height" constant="88" id="Pd2-dy-3b0"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
