--- a/MyApp/Main/StoryBoard/Member.storyboard
+++ b/MyApp/Main/StoryBoard/Member.storyboard
@@ -207,7 +207,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="member_share" translatesAutoresizingMaskIntoConstraints="NO" id="3x3-0I-JcC">
-                                                    <rect key="frame" x="307" y="69.666666666666671" width="107" height="39"/>
+                                                    <rect key="frame" x="307" y="69.666666666666671" width="107.00000000000003" height="39"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="107" id="0eN-VT-jRg"/>
                                                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="39" id="4Sf-m4-vS1"/>
@@ -291,7 +291,7 @@
                                                             <rect key="frame" x="0.0" y="0.0" width="386" height="41.666666666666664"/>
                                                             <subviews>
                                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="member_account" translatesAutoresizingMaskIntoConstraints="NO" id="0bt-dm-fEm">
-                                                                    <rect key="frame" x="13" y="15.333333333333314" width="15" height="11"/>
+                                                                    <rect key="frame" x="12.999999999999998" y="15.333333333333314" width="15.000000000000002" height="11"/>
                                                                     <constraints>
                                                                         <constraint firstAttribute="height" constant="11" id="AWn-Of-LvJ"/>
                                                                         <constraint firstAttribute="width" constant="15" id="gG3-E1-FFA"/>
@@ -492,7 +492,7 @@
                                                     </constraints>
                                                 </view>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zg2-pM-fJ1">
-                                                    <rect key="frame" x="307" y="73" width="107" height="32"/>
+                                                    <rect key="frame" x="307" y="81" width="107" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                     <state key="normal" title="分享立得VIP" image="member_gift">
                                                         <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -654,7 +654,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uLr-z5-TZJ">
-                                <rect key="frame" x="70" y="109" width="274" height="40"/>
+                                <rect key="frame" x="70" y="109" width="274" height="40.000000000000014"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="23T-Eo-tGA"/>
                                 </constraints>
@@ -701,7 +701,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fHk-Pd-F6x">
-                                <rect key="frame" x="70" y="109" width="274" height="40"/>
+                                <rect key="frame" x="70" y="109" width="274" height="40.000000000000014"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Tiz-hz-LOr"/>
                                 </constraints>
@@ -782,12 +782,11 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v02-GI-yuu">
-                                        <rect key="frame" x="380" y="16" width="20" height="20"/>
+                                        <rect key="frame" x="362" y="0.0" width="52" height="52"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="R6y-bE-zT3"/>
-                                            <constraint firstAttribute="width" constant="20" id="UeL-5K-Sb0"/>
+                                            <constraint firstAttribute="width" secondItem="v02-GI-yuu" secondAttribute="height" id="Hc9-vf-Vd8"/>
                                         </constraints>
-                                        <state key="normal" backgroundImage="right_drak"/>
+                                        <state key="normal" image="right-arrow"/>
                                         <connections>
                                             <action selector="goToFillMailBox:" destination="hoj-HN-F3o" eventType="touchUpInside" id="hZv-pV-KJa"/>
                                         </connections>
@@ -795,14 +794,16 @@
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="v02-GI-yuu" secondAttribute="trailing" constant="14" id="5co-BT-jww"/>
+                                    <constraint firstAttribute="trailing" secondItem="v02-GI-yuu" secondAttribute="trailing" id="5co-BT-jww"/>
                                     <constraint firstItem="v02-GI-yuu" firstAttribute="centerY" secondItem="3MG-7w-oya" secondAttribute="centerY" id="6nS-41-opd"/>
                                     <constraint firstAttribute="trailing" secondItem="oe4-NJ-kNd" secondAttribute="trailing" constant="14" id="93G-ht-ngx"/>
                                     <constraint firstAttribute="height" constant="52" id="9uE-JP-Lfr"/>
                                     <constraint firstAttribute="bottom" secondItem="oe4-NJ-kNd" secondAttribute="bottom" id="Ct7-h2-DdF"/>
+                                    <constraint firstItem="v02-GI-yuu" firstAttribute="top" secondItem="3MG-7w-oya" secondAttribute="top" id="N6O-dE-B9O"/>
                                     <constraint firstItem="l7Y-bp-BjI" firstAttribute="centerY" secondItem="3MG-7w-oya" secondAttribute="centerY" id="iYb-P4-kO4"/>
                                     <constraint firstItem="oe4-NJ-kNd" firstAttribute="leading" secondItem="3MG-7w-oya" secondAttribute="leading" constant="14" id="nZe-1b-vUN"/>
                                     <constraint firstItem="l7Y-bp-BjI" firstAttribute="leading" secondItem="3MG-7w-oya" secondAttribute="leading" constant="14" id="q4T-ko-bee"/>
+                                    <constraint firstAttribute="bottom" secondItem="v02-GI-yuu" secondAttribute="bottom" id="vuo-um-qKg"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uAu-S7-z2o">
@@ -822,12 +823,11 @@
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MUQ-o9-i45">
-                                        <rect key="frame" x="380" y="16" width="20" height="20"/>
+                                        <rect key="frame" x="362" y="0.0" width="52" height="52"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="20" id="M6f-ua-pOw"/>
-                                            <constraint firstAttribute="width" constant="20" id="qe2-UV-ozE"/>
+                                            <constraint firstAttribute="width" secondItem="MUQ-o9-i45" secondAttribute="height" id="LTp-gF-d5E"/>
                                         </constraints>
-                                        <state key="normal" backgroundImage="right_drak"/>
+                                        <state key="normal" image="right-arrow"/>
                                         <connections>
                                             <action selector="goToChangePsw:" destination="hoj-HN-F3o" eventType="touchUpInside" id="LCu-YL-OT0"/>
                                         </connections>
@@ -839,14 +839,16 @@
                                     <constraint firstAttribute="trailing" secondItem="kgP-M5-KqG" secondAttribute="trailing" constant="14" id="Akz-Rn-0mf"/>
                                     <constraint firstAttribute="height" constant="52" id="FY3-RO-LDg"/>
                                     <constraint firstItem="cNK-0P-EcA" firstAttribute="leading" secondItem="uAu-S7-z2o" secondAttribute="leading" constant="14" id="GrF-mT-JI3"/>
+                                    <constraint firstItem="MUQ-o9-i45" firstAttribute="top" secondItem="uAu-S7-z2o" secondAttribute="top" id="LFn-ER-SEe"/>
                                     <constraint firstItem="kgP-M5-KqG" firstAttribute="leading" secondItem="uAu-S7-z2o" secondAttribute="leading" constant="14" id="OPM-IH-Pdy"/>
                                     <constraint firstAttribute="bottom" secondItem="kgP-M5-KqG" secondAttribute="bottom" id="Rnk-W9-wqW"/>
-                                    <constraint firstAttribute="trailing" secondItem="MUQ-o9-i45" secondAttribute="trailing" constant="14" id="fbl-Rh-iec"/>
+                                    <constraint firstAttribute="trailing" secondItem="MUQ-o9-i45" secondAttribute="trailing" id="fbl-Rh-iec"/>
+                                    <constraint firstAttribute="bottom" secondItem="MUQ-o9-i45" secondAttribute="bottom" id="oiR-yo-Yyp"/>
                                     <constraint firstItem="MUQ-o9-i45" firstAttribute="centerY" secondItem="uAu-S7-z2o" secondAttribute="centerY" id="uiH-65-G1i"/>
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ssh-fw-8G1">
-                                <rect key="frame" x="67" y="212" width="280" height="40"/>
+                                <rect key="frame" x="67" y="212" width="280" height="40.000000000000014"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="90s-pq-fQn"/>
                                 </constraints>
@@ -955,7 +957,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ABt-ve-ZPf">
-                                <rect key="frame" x="67" y="212" width="280" height="40"/>
+                                <rect key="frame" x="67" y="212" width="280" height="40.000000000000014"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="oDG-aJ-Sv2"/>
                                 </constraints>
@@ -1351,7 +1353,7 @@
                                         </state>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhp-bR-wna">
-                                        <rect key="frame" x="50" y="102" width="160" height="40"/>
+                                        <rect key="frame" x="50" y="102" width="160" height="40.000000000000014"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Vpd-FN-e9C"/>
                                         </constraints>
@@ -1420,6 +1422,5 @@
         <image name="member_wechatCir" width="40" height="40"/>
         <image name="member_zi_choose" width="168.66667175292969" height="40.333332061767578"/>
         <image name="right-arrow" width="7.3333334922790527" height="12.666666984558105"/>
-        <image name="right_drak" width="64" height="64"/>
     </resources>
 </document>
